--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.17.10",
     "@graphql-tools/schema": "^8.3.10",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.0",
     "express-graphql": "^0.12.0",
